--- a/Function_tests.ipynb
+++ b/Function_tests.ipynb
@@ -888,11 +888,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fcc2a451",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'prediction_proba': 0.5279585459636567,\n",
+       " 'prediction': 1,\n",
+       " 'message': 'Income <=50K'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "sample_dict = {     'workclass': 'state_gov',\n",
+    "                    'education': 'bachelors',\n",
+    "                    'marital_status': 'never_married',\n",
+    "                    'occupation': 'adm_clerical',\n",
+    "                    'relationship': 'not_in_family',\n",
+    "                    'race': 'white',\n",
+    "                    'sex': 'male',\n",
+    "                    'native_country': 'united_states',\n",
+    "                    'age': 39,\n",
+    "                    'fnlwgt': 77516,\n",
+    "                    'education_num': 13,\n",
+    "                    'capital_gain': 20000,\n",
+    "                    'capital_loss': 0,\n",
+    "                    'hours_per_week': 40\n",
+    "                }\n",
+    "\n",
+    "response = requests.post('http://localhost:8000/predict', json=sample_dict)\n",
+    "response.json()"
+   ]
   },
   {
    "cell_type": "code",
@@ -929,7 +963,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.13 ('udacity-ml-devops-nano-2')",
    "language": "python",
    "name": "python3"
   },
@@ -944,6 +978,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "fd5150a16d85c014e5d4927b8ac75bae8a55a545327dd7f7547976b47ce2a268"
+   }
   }
  },
  "nbformat": 4,
