updating codebase with starter code

--- a/Function_tests.ipynb
+++ b/Function_tests.ipynb
@@ -2,6 +2,170 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "8926f04a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Welcome to the Adult Income Prediction API'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "r = requests.get('http://localhost:8000/')\n",
+    "r.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8e96d6ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n",
+      "The predicted income is: >50k\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "sample_dict = {     \n",
+    "                    \"workclass\": \"state_gov\",\n",
+    "                    \"education\": \"bachelors\",\n",
+    "                    \"marital_status\": \"never_married\",\n",
+    "                    \"occupation\": \"adm_clerical\",\n",
+    "                    \"relationship\": \"not_in_family\",\n",
+    "                    \"race\": \"white\",\n",
+    "                    \"sex\": \"male\",\n",
+    "                    \"native_country\": \"united_states\",\n",
+    "                    \"age\": 39,\n",
+    "                    \"fnlwgt\": 77516,\n",
+    "                    \"education_num\": 13,\n",
+    "                    \"capital_gain\": 10000,\n",
+    "                    \"capital_loss\": 0,\n",
+    "                    \"hours_per_week\": 40\n",
+    "                }\n",
+    "response = requests.post('http://localhost:8000/predict', json=sample_dict)\n",
+    "print(response)\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "84d899bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [422]>\n",
+      "Please enter all the data\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "sample_dict = {\n",
+    "                    \"workclass\": \"string\",\n",
+    "                    \"education\": \"string\",\n",
+    "                    \"marital_status\": \"string\",\n",
+    "                    \"occupation\": \"string\",\n",
+    "                    \"relationship\": \"string\",\n",
+    "                    \"race\": \"string\",\n",
+    "                    \"sex\": \"string\",\n",
+    "                    \"native_country\": \"string\",\n",
+    "                    \"age\": 10,\n",
+    "                    \"fnlwgt\": 10,\n",
+    "                    \"education_num\": 10,\n",
+    "                    \"capital_gain\": 10,\n",
+    "                    \"capital_loss\": 10,\n",
+    "                    \"hours_per_week\": 10\n",
+    "                }\n",
+    "response = requests.post('http://localhost:8000/predict', json=sample_dict)\n",
+    "print(response)\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "0cca8394",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['string',\n",
+       " 'string',\n",
+       " 'string',\n",
+       " 'string',\n",
+       " 'string',\n",
+       " 'string',\n",
+       " 'string',\n",
+       " 'string',\n",
+       " 10,\n",
+       " 10,\n",
+       " 10,\n",
+       " 10,\n",
+       " 10,\n",
+       " 10]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(list(sample_dict.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "4723901e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "any(list(sample_dict.values())) == \"string\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad4cd7a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "5948bf97",
    "metadata": {},
@@ -905,28 +1069,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "import requests\n",
-    "\n",
-    "sample_dict = {     'workclass': 'state_gov',\n",
-    "                    'education': 'bachelors',\n",
-    "                    'marital_status': 'never_married',\n",
-    "                    'occupation': 'adm_clerical',\n",
-    "                    'relationship': 'not_in_family',\n",
-    "                    'race': 'white',\n",
-    "                    'sex': 'male',\n",
-    "                    'native_country': 'united_states',\n",
-    "                    'age': 39,\n",
-    "                    'fnlwgt': 77516,\n",
-    "                    'education_num': 13,\n",
-    "                    'capital_gain': 20000,\n",
-    "                    'capital_loss': 0,\n",
-    "                    'hours_per_week': 40\n",
-    "                }\n",
-    "\n",
-    "response = requests.post('http://localhost:8000/predict', json=sample_dict)\n",
-    "response.json()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -963,7 +1106,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('udacity-ml-devops-nano-2')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
