--- a/Function_tests.ipynb
+++ b/Function_tests.ipynb
@@ -2,8 +2,161 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "709164b2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting google-api-python-client\n",
+      "  Using cached google_api_python_client-2.64.0-py2.py3-none-any.whl (10.4 MB)\n",
+      "Collecting google-auth-httplib2\n",
+      "  Using cached google_auth_httplib2-0.1.0-py2.py3-none-any.whl (9.3 kB)\n",
+      "Collecting google-auth-oauthlib\n",
+      "  Using cached google_auth_oauthlib-0.5.3-py2.py3-none-any.whl (19 kB)\n",
+      "Collecting uritemplate<5,>=3.0.1\n",
+      "  Using cached uritemplate-4.1.1-py2.py3-none-any.whl (10 kB)\n",
+      "Collecting google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0dev,>=1.31.5\n",
+      "  Using cached google_api_core-2.10.2-py3-none-any.whl (115 kB)\n",
+      "Collecting httplib2<1dev,>=0.15.0\n",
+      "  Using cached httplib2-0.20.4-py3-none-any.whl (96 kB)\n",
+      "Collecting google-auth<3.0.0dev,>=1.19.0\n",
+      "  Using cached google_auth-2.12.0-py2.py3-none-any.whl (169 kB)\n",
+      "Requirement already satisfied: six in /Users/mahesh.sinha/opt/anaconda3/envs/udacity-ml-devops-nano-2/lib/python3.8/site-packages (from google-auth-httplib2) (1.16.0)\n",
+      "Collecting requests-oauthlib>=0.7.0\n",
+      "  Using cached requests_oauthlib-1.3.1-py2.py3-none-any.whl (23 kB)\n",
+      "Collecting googleapis-common-protos<2.0dev,>=1.56.2\n",
+      "  Using cached googleapis_common_protos-1.56.4-py2.py3-none-any.whl (211 kB)\n",
+      "Collecting protobuf!=3.20.0,!=3.20.1,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.19.5\n",
+      "  Using cached protobuf-4.21.7-cp37-abi3-macosx_10_9_universal2.whl (484 kB)\n",
+      "Requirement already satisfied: requests<3.0.0dev,>=2.18.0 in /Users/mahesh.sinha/opt/anaconda3/envs/udacity-ml-devops-nano-2/lib/python3.8/site-packages (from google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0dev,>=1.31.5->google-api-python-client) (2.28.1)\n",
+      "Collecting rsa<5,>=3.1.4\n",
+      "  Using cached rsa-4.9-py3-none-any.whl (34 kB)\n",
+      "Collecting pyasn1-modules>=0.2.1\n",
+      "  Using cached pyasn1_modules-0.2.8-py2.py3-none-any.whl (155 kB)\n",
+      "Collecting cachetools<6.0,>=2.0.0\n",
+      "  Using cached cachetools-5.2.0-py3-none-any.whl (9.3 kB)\n",
+      "Requirement already satisfied: pyparsing!=3.0.0,!=3.0.1,!=3.0.2,!=3.0.3,<4,>=2.4.2 in /Users/mahesh.sinha/opt/anaconda3/envs/udacity-ml-devops-nano-2/lib/python3.8/site-packages (from httplib2<1dev,>=0.15.0->google-api-python-client) (3.0.9)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in /Users/mahesh.sinha/opt/anaconda3/envs/udacity-ml-devops-nano-2/lib/python3.8/site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib) (3.2.0)\n",
+      "Collecting pyasn1<0.5.0,>=0.4.6\n",
+      "  Using cached pyasn1-0.4.8-py2.py3-none-any.whl (77 kB)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/mahesh.sinha/opt/anaconda3/envs/udacity-ml-devops-nano-2/lib/python3.8/site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0dev,>=1.31.5->google-api-python-client) (2022.9.24)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/mahesh.sinha/opt/anaconda3/envs/udacity-ml-devops-nano-2/lib/python3.8/site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0dev,>=1.31.5->google-api-python-client) (2.1.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/mahesh.sinha/opt/anaconda3/envs/udacity-ml-devops-nano-2/lib/python3.8/site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0dev,>=1.31.5->google-api-python-client) (3.3)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/mahesh.sinha/opt/anaconda3/envs/udacity-ml-devops-nano-2/lib/python3.8/site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0dev,>=1.31.5->google-api-python-client) (1.26.11)\n",
+      "Installing collected packages: pyasn1, uritemplate, rsa, pyasn1-modules, protobuf, httplib2, cachetools, requests-oauthlib, googleapis-common-protos, google-auth, google-auth-oauthlib, google-auth-httplib2, google-api-core, google-api-python-client\n",
+      "  Attempting uninstall: protobuf\n",
+      "    Found existing installation: protobuf 3.20.1\n",
+      "    Uninstalling protobuf-3.20.1:\n",
+      "      Successfully uninstalled protobuf-3.20.1\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "wandb 0.13.1 requires protobuf<4.0dev,>=3.12.0, but you have protobuf 4.21.7 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0mSuccessfully installed cachetools-5.2.0 google-api-core-2.10.2 google-api-python-client-2.64.0 google-auth-2.12.0 google-auth-httplib2-0.1.0 google-auth-oauthlib-0.5.3 googleapis-common-protos-1.56.4 httplib2-0.20.4 protobuf-4.21.7 pyasn1-0.4.8 pyasn1-modules-0.2.8 requests-oauthlib-1.3.1 rsa-4.9 uritemplate-4.1.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c7b7f3cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Client secrets must be for a web or installed app.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 56>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     53\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAn error occurred: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00merror\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     56\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m---> 57\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     58\u001b[0m main()\n",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m     creds\u001b[38;5;241m.\u001b[39mrefresh(Request())\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 30\u001b[0m     flow \u001b[38;5;241m=\u001b[39m \u001b[43mInstalledAppFlow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_client_secrets_file\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcredentials.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSCOPES\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     32\u001b[0m     creds \u001b[38;5;241m=\u001b[39m flow\u001b[38;5;241m.\u001b[39mrun_local_server(port\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# Save the credentials for the next run\u001b[39;00m\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/udacity-ml-devops-nano-2/lib/python3.8/site-packages/google_auth_oauthlib/flow.py:207\u001b[0m, in \u001b[0;36mFlow.from_client_secrets_file\u001b[0;34m(cls, client_secrets_file, scopes, **kwargs)\u001b[0m\n\u001b[1;32m    204\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(client_secrets_file, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m json_file:\n\u001b[1;32m    205\u001b[0m     client_config \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(json_file)\n\u001b[0;32m--> 207\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_client_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43mclient_config\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscopes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mscopes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/udacity-ml-devops-nano-2/lib/python3.8/site-packages/google_auth_oauthlib/flow.py:165\u001b[0m, in \u001b[0;36mFlow.from_client_config\u001b[0;34m(cls, client_config, scopes, **kwargs)\u001b[0m\n\u001b[1;32m    163\u001b[0m     client_type \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minstalled\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    164\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 165\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClient secrets must be for a web or installed app.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    167\u001b[0m \u001b[38;5;66;03m# these args cannot be passed to requests_oauthlib.OAuth2Session\u001b[39;00m\n\u001b[1;32m    168\u001b[0m code_verifier \u001b[38;5;241m=\u001b[39m kwargs\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcode_verifier\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
+      "\u001b[0;31mValueError\u001b[0m: Client secrets must be for a web or installed app."
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import print_function\n",
+    "\n",
+    "import os.path\n",
+    "\n",
+    "from google.auth.transport.requests import Request\n",
+    "from google.oauth2.credentials import Credentials\n",
+    "from google_auth_oauthlib.flow import InstalledAppFlow\n",
+    "from googleapiclient.discovery import build\n",
+    "from googleapiclient.errors import HttpError\n",
+    "\n",
+    "# If modifying these scopes, delete the file token.json.\n",
+    "SCOPES = ['https://www.googleapis.com/auth/drive.metadata.readonly']\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    \"\"\"Shows basic usage of the Drive v3 API.\n",
+    "    Prints the names and ids of the first 10 files the user has access to.\n",
+    "    \"\"\"\n",
+    "    creds = None\n",
+    "    # The file token.json stores the user's access and refresh tokens, and is\n",
+    "    # created automatically when the authorization flow completes for the first\n",
+    "    # time.\n",
+    "    if os.path.exists('token.json'):\n",
+    "        creds = Credentials.from_authorized_user_file('token.json', SCOPES)\n",
+    "    # If there are no (valid) credentials available, let the user log in.\n",
+    "    if not creds or not creds.valid:\n",
+    "        if creds and creds.expired and creds.refresh_token:\n",
+    "            creds.refresh(Request())\n",
+    "        else:\n",
+    "            flow = InstalledAppFlow.from_client_secrets_file(\n",
+    "                'credentials.json', SCOPES)\n",
+    "            creds = flow.run_local_server(port=0)\n",
+    "        # Save the credentials for the next run\n",
+    "        with open('token.json', 'w') as token:\n",
+    "            token.write(creds.to_json())\n",
+    "\n",
+    "    try:\n",
+    "        service = build('drive', 'v3', credentials=creds)\n",
+    "\n",
+    "        # Call the Drive v3 API\n",
+    "        results = service.files().list(\n",
+    "            pageSize=10, fields=\"nextPageToken, files(id, name)\").execute()\n",
+    "        items = results.get('files', [])\n",
+    "\n",
+    "        if not items:\n",
+    "            print('No files found.')\n",
+    "            return\n",
+    "        print('Files:')\n",
+    "        for item in items:\n",
+    "            print(u'{0} ({1})'.format(item['name'], item['id']))\n",
+    "    except HttpError as error:\n",
+    "        # TODO(developer) - Handle errors from drive API.\n",
+    "        print(f'An error occurred: {error}')\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c6c33a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
-   "id": "8926f04a",
+   "id": "2f494baf",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "8e96d6ef",
+   "id": "bea6cf1f",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "84d899bb",
+   "id": "39b88e00",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0cca8394",
+   "id": "a0cd4c8f",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4723901e",
+   "id": "6749f207",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad4cd7a8",
+   "id": "5096d469",
    "metadata": {},
    "outputs": [],
    "source": []
