--- a/Function_tests.ipynb
+++ b/Function_tests.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "5d2bd986",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "'Welcome to the Adult Income Prediction API'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "0131976e",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
      "output_type": "stream",
      "text": [
       "<Response [200]>\n",
-      "The predicted income is: >50k\n"
+      "The predicted income is: <=50k\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
     "                    \"age\": 39,\n",
     "                    \"fnlwgt\": 77516,\n",
     "                    \"education_num\": 13,\n",
-    "                    \"capital_gain\": 10000,\n",
+    "                    \"capital_gain\": 2000,\n",
     "                    \"capital_loss\": 0,\n",
     "                    \"hours_per_week\": 40\n",
     "                }\n",
